--- a/textuality-client/client/main.html
+++ b/textuality-client/client/main.html
@@ -1,7 +1,16 @@
 <head>
-  <title>textuality-client</title>
+  <title>Textuality</title>
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, height=675"
+  />
+
+  <script
+    defer
+    src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"
+  ></script>
 </head>
 
 <body>
-  <div id="react-target"></div>
+  <div id="app"></div>
 </body>
