--- a/textuality-client/client/main.html
+++ b/textuality-client/client/main.html
@@ -1,9 +1,6 @@
 <head>
   <title>Textuality</title>
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, height=675"
-  />
+  <meta name="viewport" content="width=device-width" />
 
   <script
     defer
