Textuality refactor stuff

--- a/textuality-admin/client/main.html
+++ b/textuality-admin/client/main.html
@@ -1,5 +1,6 @@
 <head>
-  <title>textuality-admin</title>
+  <title>Textuality Admin</title>
+  <meta name="viewport" content="initial-scale=1, width=device-width" />
 </head>
 
 <body>
