Fixes to allow admin to run in Meteor 2.8

--- a/old-au/textuality-admin/client/main.html
+++ b/old-au/textuality-admin/client/main.html
@@ -9,6 +9,8 @@
     defer
     src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"
   ></script>
+
+  <link rel="stylesheet" href="main.scss" />
 </head>
 
 <body>
