--- a/textuality-client/client/main.html
+++ b/textuality-client/client/main.html
@@ -2,6 +2,8 @@
   <title>Textuality</title>
   <meta name="viewport" content="width=device-width" />
 
+  <link rel="stylesheet" href="https://use.typekit.net/aht0oew.css" />
+
   <script
     defer
     src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"
