--- a/textuality-admin/client/main.html
+++ b/textuality-admin/client/main.html
@@ -1,18 +1,18 @@
 <head>
-  <title>Textuality Admin</title>
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, height=675"
-  />
+    <title>Textuality Admin</title>
+    <meta
+            name='viewport'
+            content='width=device-width, initial-scale=1, height=675'
+    />
 
-  <script
-    defer
-    src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"
-  ></script>
+    <script
+            defer
+            src='https://use.fontawesome.com/releases/v5.0.4/js/all.js'
+    ></script>
 
-  <link rel="stylesheet" href="main.scss" />
+    <link rel='stylesheet' href='main.css' />
 </head>
 
 <body>
-  <div id="app"></div>
+<div id='app'></div>
 </body>
