--- a/textuality-admin/client/main.html
+++ b/textuality-admin/client/main.html
@@ -1,15 +1,6 @@
 <head>
     <title>Textuality Admin</title>
-    <meta
-            name='viewport'
-            content='width=device-width, initial-scale=1, height=675'
-    />
-
-    <script
-            defer
-            src='https://use.fontawesome.com/releases/v5.0.4/js/all.js'
-    ></script>
-
+    <meta name='viewport' content='initial-scale=1, width=device-width' />
     <link rel='stylesheet' href='main.css' />
 </head>
 
