--- a/textuality-admin/client/main.html
+++ b/textuality-admin/client/main.html
@@ -1,9 +1,15 @@
 <head>
-    <title>Textuality Admin</title>
-    <meta name='viewport' content='initial-scale=1, width=device-width' />
-    <link rel='stylesheet' href='main.css' />
+  <title>Textuality Admin</title>
+  <meta name="viewport" content="initial-scale=1, width=device-width" />
+  <link rel="stylesheet" href="main.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap"
+  />
 </head>
 
 <body>
-<div id='app'></div>
+  <div id="app"></div>
 </body>
