Fonts plus more info in slot machine admin

--- a/textuality-client/client/main.html
+++ b/textuality-client/client/main.html
@@ -2,7 +2,7 @@
   <title>Textuality</title>
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="https://use.typekit.net/aht0oew.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/lod8mlk.css" />
 
   <script
     defer
